# active-assignment-1

./: .gitignore  CNN.py  TUNING_GUIDE.md  analysis.py  download_data.py  main.py  optimization_log.txt  pyproject.toml  test.py
results/: bo_optimizer_comparison.json  bo_summary.csv  bo_trials.csv
src/: analysis.py  download_data.py  model.py
