[project]
name = "active-1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11, <3.12"
dependencies = [
    "torch==2.2.2",
    "torchvision==0.17.2",
    "scikit-learn",
    "matplotlib",
    "seaborn",
    "pandas",
    "optuna",
    "tqdm>=4.67.3",
    "tdqm>=0.0.1",
    "tensorflow>=2.20.0",
]
